// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyComponent should render Locked SettingsOverview 1`] = `
<SettingsOverviewComponent
  account={
    Object {
      "currencyConfig": Object {},
    }
  }
  autoLogoutTimeInSeconds={0}
  confirmPassword={[Function]}
  confirmPasswordError=""
  defaultFiat=""
  dispatchUpdateEnableTouchIdEnable={[Function]}
  isLocked={true}
  lockButton=""
  lockButtonIcon="ios-lock"
  lockSettings={[Function]}
  onTogglePinLoginEnabled={[Function]}
  pinLoginEnabled={false}
  resetConfirmPasswordError={[Function]}
  resetSendLogsStatus={[Function]}
  sendLogs={[Function]}
  sendLogsStatus=""
  setAutoLogoutTimeInSeconds={[Function]}
  showRestoreWalletsModal={[Function]}
  supportsTouchId={false}
  theme={
    Object {
      "backgroundGradientLeft": "#0C446A",
      "backgroundGradientRight": "#0D2145",
      "dangerText": "#E85466",
      "datetimepickerBackgroundDark": "#0E4B75",
      "datetimepickerBackgroundLight": "#FFFFFF",
      "deactivatedText": "#87939E",
      "fontFaceBold": "SourceSansPro-Bold",
      "fontFaceDefault": "SourceSansPro-Black",
      "fontFaceSymbols": "SourceSansPro-Black",
      "icon": "#FFFFFF",
      "iconTappable": "#66EDA8",
      "keyboardTopViewBackgroundDark": "#0E4B75",
      "keyboardTopViewBackgroundLight": "#FFFFFF",
      "keyboardTopViewTextDark": "#FFFFFF",
      "keyboardTopViewTextLight": "#0073D9",
      "modal": "#003B65",
      "modalBackgroundShadowOpacity": 0.7,
      "modalCloseIcon": "#66EDA8",
      "modalShadow": "rgba(0, 0, 0, .5)",
      "negativeText": "#E85466",
      "positiveText": "#77C513",
      "primaryButton": "#66EDA8",
      "primaryButtonOutline": "rgba(255, 255, 255, 0)",
      "primaryButtonText": "#0E4B75",
      "primaryText": "#FFFFFF",
      "rem": [Function],
      "secondaryButton": "rgba(255, 255, 255, 0)",
      "secondaryButtonOutline": "#66EDA8",
      "secondaryButtonText": "#66EDA8",
      "secondaryText": "#A4C7DF",
      "settingsChangellyLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangelly.png",
      },
      "settingsChangenowLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangenow.png",
      },
      "settingsCoinswitchLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeCoinswitch.png",
      },
      "settingsDefaultLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeDefault.png",
      },
      "settingsFaastLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFaast.png",
      },
      "settingsFoxExchangeLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFoxExchange.png",
      },
      "settingsGodexLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeGodex.png",
      },
      "settingsRowBackground": "#0E4B75",
      "settingsRowHeaderBackground": "#0D2145",
      "settingsRowPressed": "rgba(255, 255, 255, 0)",
      "settingsRowSubHeader": "rgba(255, 255, 255, 0)",
      "settingsSwitchainLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeSwitchain.png",
      },
      "settingsTotleLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeTotle.png",
      },
      "textLink": "#66EDA8",
      "themeId": "edgedark",
      "tileBackground": "#0E4B75",
      "toggleButton": "#66EDA8",
      "toggleButtonOff": "#87939E",
    }
  }
  touchIdEnabled={false}
  username=""
/>
`;

exports[`MyComponent should render UnLocked SettingsOverview 1`] = `
<SettingsOverviewComponent
  account={
    Object {
      "currencyConfig": Object {},
    }
  }
  autoLogoutTimeInSeconds={0}
  confirmPassword={[Function]}
  confirmPasswordError=""
  defaultFiat=""
  dispatchUpdateEnableTouchIdEnable={[Function]}
  isLocked={false}
  lockButton=""
  lockButtonIcon="ios-unlock"
  lockSettings={[Function]}
  onTogglePinLoginEnabled={[Function]}
  pinLoginEnabled={false}
  resetConfirmPasswordError={[Function]}
  resetSendLogsStatus={[Function]}
  sendLogs={[Function]}
  sendLogsStatus=""
  setAutoLogoutTimeInSeconds={[Function]}
  showRestoreWalletsModal={[Function]}
  supportsTouchId={false}
  theme={
    Object {
      "backgroundGradientLeft": "#0C446A",
      "backgroundGradientRight": "#0D2145",
      "dangerText": "#E85466",
      "datetimepickerBackgroundDark": "#0E4B75",
      "datetimepickerBackgroundLight": "#FFFFFF",
      "deactivatedText": "#87939E",
      "fontFaceBold": "SourceSansPro-Bold",
      "fontFaceDefault": "SourceSansPro-Black",
      "fontFaceSymbols": "SourceSansPro-Black",
      "icon": "#FFFFFF",
      "iconTappable": "#66EDA8",
      "keyboardTopViewBackgroundDark": "#0E4B75",
      "keyboardTopViewBackgroundLight": "#FFFFFF",
      "keyboardTopViewTextDark": "#FFFFFF",
      "keyboardTopViewTextLight": "#0073D9",
      "modal": "#003B65",
      "modalBackgroundShadowOpacity": 0.7,
      "modalCloseIcon": "#66EDA8",
      "modalShadow": "rgba(0, 0, 0, .5)",
      "negativeText": "#E85466",
      "positiveText": "#77C513",
      "primaryButton": "#66EDA8",
      "primaryButtonOutline": "rgba(255, 255, 255, 0)",
      "primaryButtonText": "#0E4B75",
      "primaryText": "#FFFFFF",
      "rem": [Function],
      "secondaryButton": "rgba(255, 255, 255, 0)",
      "secondaryButtonOutline": "#66EDA8",
      "secondaryButtonText": "#66EDA8",
      "secondaryText": "#A4C7DF",
      "settingsChangellyLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangelly.png",
      },
      "settingsChangenowLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeChangenow.png",
      },
      "settingsCoinswitchLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeCoinswitch.png",
      },
      "settingsDefaultLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeDefault.png",
      },
      "settingsFaastLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFaast.png",
      },
      "settingsFoxExchangeLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeFoxExchange.png",
      },
      "settingsGodexLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeGodex.png",
      },
      "settingsRowBackground": "#0E4B75",
      "settingsRowHeaderBackground": "#0D2145",
      "settingsRowPressed": "rgba(255, 255, 255, 0)",
      "settingsRowSubHeader": "rgba(255, 255, 255, 0)",
      "settingsSwitchainLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeSwitchain.png",
      },
      "settingsTotleLogo": Object {
        "testUri": "../../../src/assets/images/exchange/settingsExchangeTotle.png",
      },
      "textLink": "#66EDA8",
      "themeId": "edgedark",
      "tileBackground": "#0E4B75",
      "toggleButton": "#66EDA8",
      "toggleButtonOff": "#87939E",
    }
  }
  touchIdEnabled={false}
  username=""
/>
`;
